Review popup z-index issue resolved

--- a/src/main/resources/css/search/search-result-resources.css
+++ b/src/main/resources/css/search/search-result-resources.css
@@ -224,8 +224,8 @@ margin:0 0 0 -20px !important;
 	font-size: 13px;
 	padding-top: 9px;
 	text-align:center;
-	color:#515151;
-	width:171%;
+	color:grey;
+	width:150%;
 }
 #gooruSearchMainContainer .userDetailsResources .user img{
 	border-radius: 50px;
